--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.8.2",
     "vite": "^6.2.0"
   }
 }
