--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.5",
+    "@lottiefiles/dotlottie-react": "^0.13.4",
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.8.4",
     "codemirror": "^6.0.1",
     "react": "^19.0.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "uuid": "^11.1.0"
